--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,11 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
+    "dialect": "sqlite",
+    "storage": "../data/db.sqlite"
+},
   "test": {
     "username": "root",
     "password": null,
