empezando a armar ABM de productos

--- a/src/config/config-ejemplo.json
+++ b/src/config/config-ejemplo.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "../data/db.sqlite"
+    "storage": "./data/db.sqlite"
 },
   "test": {
     "username": "root",
