--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [
     "sequelize",
@@ -21,6 +22,8 @@
   "dependencies": {
     "express": "^4.21.0",
     "joi": "^17.13.3",
+    "mysql2": "^3.11.3",
+    "pg": "^8.13.0",
     "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7"
   }
