--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # decomentar para levantar solo una base de datos mysql
 COMPOSE_FILE=docker-compose-mysql.yml
-
+NODE_ENV=test
 
 # descomentar para iniciar solo una bd postgres
 # COMPOSE_FILE=docker-compose-psql.yml
-
+#NODE_ENV=production
