--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "joi": "^17.13.3",
     "mysql2": "^3.11.3",
